Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/Quest__c.object-meta.xml
<CustomObject>
    <label>Quest</label>
    <pluralLabel>Quests</pluralLabel>
    <nameField>
        <label>Quest</label>
        <type>AutoNumber</type>
        <displayFormat>QST-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>