Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Badge_Count</fullName>
            </value>
            <value>
                <fullName>Trail_Completion</fullName>
            </value>
            <value>
                <fullName>Cert_Earned</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <inlineHelpText>The type of completion criteria for this quest.</inlineHelpText>
</CustomField>