Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/fields/Criteria_Value__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Value__c</fullName>
    <label>Criteria Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <inlineHelpText>The target value for the completion criteria (e.g., 10 for 10 badges).</inlineHelpText>
</CustomField>