Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Html</type>
    <length>32768</length>
    <inlineHelpText>Full description of the quest objectives and prizes.</inlineHelpText>
</CustomField>