Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <formula>AND(TODAY() &gt;= Start_Date__c, TODAY() &lt;= End_Date__c)</formula>
    <inlineHelpText>True when today falls within the quest start and end dates.</inlineHelpText>
</CustomField>