Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/fields/Quest_Name__c.field-meta.xml
<CustomField>
    <fullName>Quest_Name__c</fullName>
    <label>Quest Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <inlineHelpText>The name of this time-bound learning challenge.</inlineHelpText>
</CustomField>