Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/fields/Reward_Description__c.field-meta.xml
<CustomField>
    <fullName>Reward_Description__c</fullName>
    <label>Reward Description</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Description of the prize or reward for completing this quest.</inlineHelpText>
</CustomField>