Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/fields/XP_Reward__c.field-meta.xml
<CustomField>
    <fullName>XP_Reward__c</fullName>
    <label>XP Reward</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Platform XP awarded on quest completion.</inlineHelpText>
</CustomField>