Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(End_Date__c)), NOT(ISBLANK(Start_Date__c)), End_Date__c &lt;= Start_Date__c)</errorConditionFormula>
    <errorMessage>End date must be after start date.</errorMessage>
</ValidationRule>