Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/listViews/Active_Quests.listView-meta.xml
<ListView>
    <fullName>Active_Quests</fullName>
    <label>Active Quests</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <columns>Quest_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>XP_Reward__c</columns>
</ListView>