Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Quest__c/listViews/All_Quests.listView-meta.xml
<ListView>
    <fullName>All_Quests</fullName>
    <label>All Quests</label>
    <filterScope>Everything</filterScope>
    <columns>Quest_Name__c</columns>
    <columns>Criteria_Type__c</columns>
    <columns>Criteria_Value__c</columns>
    <columns>XP_Reward__c</columns>
</ListView>